# CellRoute

./: .gitignore  GITHUB_SUBMISSION_NOTES.md  LICENSE  README.md  REPOSITORY_DESCRIPTION.txt  environment.yml  pyproject.toml  requirements.txt
data_catalog/: candidate_datasets.md  download_manifest.csv  download_manifest.json  selected_datasets.md
legacy/: README.md
legacy/scripts/: analyze_next_mainline.py  build_topconf_selector_round2_package.py  download_external_trajectory_datasets.py  download_spatial_screening_datasets.py  fetch_cellxgene_recomb_candidates.py  gpu_cluster_from_array.py  import_real_datasets_from_hvg.py  postprocess_selector_bank_benchmark.py  restart_broad_bfs_smoke.py  restart_cleanup_bfs_dfs.py  run_anchor_energy_niche_formal_ablation.py  run_benchmarkhvg_adapter_stub_partial.R  run_benchmarkhvg_adapter_stub_partial.py  run_benchmarkhvg_anchor_repair_partial.py  run_benchmarkhvg_bootstrap_audit.py  run_benchmarkhvg_rank_blend_partial.py  run_context_representation.py  run_cross_sample_differential.py  run_crossdisciplinary_anchor_nudges_smoke.py  run_crossdisciplinary_formal_partial.py  run_crossdisciplinary_taste_smoke.py  run_external_trajectory_import_audit.py  run_external_trajectory_route_refresh.py  run_gate_learning_experiment.py  run_holdout_selector_phase2.py  run_holdout_selector_phase3_official_repro.py  run_holdout_selector_upgrade.py  run_real_benchmark.py  (+18 more)
scripts/: run_sample_aware_cross_sample_differential.py  run_sample_aware_tissue_motif_baseline.py  run_sample_permutation_simulation.py  run_tissue_motif_baseline.py
(+44 files in other folders)
